fix: use overflow-x hidden for older mobile browsers

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -53,7 +53,7 @@ body.dark {
   font-size: 1.05rem;
   line-height: 1.65;
   letter-spacing: 0.01em;
-  overflow-x: clip;
+  overflow-x: hidden;
 }
 
 body.dark h1,
